Disable render container scrolling (mousewheel use over header no longer scrolls rows); Modify CSS to allow header content to overflow into viewport (allows use of components like bootstrap dropdown/typeahead in header filters)

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -14,7 +14,7 @@
     position: relative;
     // border-bottom: 1px solid @borderColor; // #D4D4D4
 
-    overflow: hidden;  // Disable so menus show up
+    //overflow: hidden;  // Disable so menus show up
     font-weight: bold;
 
     // .gradient(@headerBackgroundColor, @headerGradientStart, @headerGradientStop);
@@ -25,7 +25,7 @@
 
 
 .ui-grid-header-viewport {
-  overflow: hidden; // Disable so menus show up
+  //overflow: hidden; // Disable so menus show up
 }
 
 .ui-grid-header-canvas {
